[package]
name = "bongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true

[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
clap = { version = "4.3.19", features = ["derive"] }
derive_more = "0.99.17"
dialoguer = "0.10.4"
lofty = "0.15.0"
redb = "1.0.5"
rspotify = { version = "0.11.7", optional = true, default-features = false, features = ["ureq-rustls-tls", "cli", "webbrowser", "dotenv", "client-ureq"] }
serde = { version = "1.0.175", features = ["derive"], optional = true}
tempfile = "3.7.0"
thiserror = "1.0.44"
toml = { version = "0.7.6", features = ["indexmap", "preserve_order"], optional = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
walkdir = "2.3.3"

[features]
default = ["backend-spotify"]
backend-spotify = ["dep:rspotify", "dep:serde", "dep:toml"]
