[package]
name = "bongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bongo_core = { version = "0.1.0", path = "../bongo-core", features = ["clap"] }
clap = { version = "4.3.19", features = ["derive"] }
toml = { version = "0.7.6", features = ["preserve_order"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
