[package]
name = "bongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive", "cargo"] }
dialoguer = "0.10.4"
lofty = "0.13.0"
serde = { version = "1.0.163", features = ["derive"] }
tempfile = { version = "3.5.0", optional = true }
toml = { version = "0.7.4", features = ["preserve_order"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]
default = ["edit"]
edit = ["modify", "dep:tempfile"]
fetch = ["spotify"]
spotify = ["modify"]
modify = []
