[package]
name = "relative-path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
serde = { version = "1.0.178", optional = true, features = ["derive"] }
thiserror = "1.0.44"

[features]
serde = ["dep:serde"]
